Ensure figure elements have expected margins when right/left aligned.

--- a/wordpress/wp-content/themes/mapaction/editor-style.css
+++ b/wordpress/wp-content/themes/mapaction/editor-style.css
@@ -383,19 +383,19 @@ table {
 
 /* Wordpress rich text editor adds these classes */
 /* line 111, sass/_defaults.scss */
-img.alignright {
+img.alignright, figure.alignright {
   float: right;
   margin: 0 0 1em 1em;
 }
 
 /* line 115, sass/_defaults.scss */
-img.alignleft {
+img.alignleft, figure.alignleft {
   float: left;
   margin: 0 1em 1em 0;
 }
 
 /* line 119, sass/_defaults.scss */
-img.aligncenter {
+img.aligncenter, figure.aligncenter {
   display: block;
   margin-left: auto;
   margin-right: auto;
