--- a/wordpress/wp-content/themes/mapaction/sass/_defaults.scss
+++ b/wordpress/wp-content/themes/mapaction/sass/_defaults.scss
@@ -108,15 +108,15 @@ table {
 }
 
 /* Wordpress rich text editor adds these classes */
-img.alignright {
+img.alignright, figure.alignright {
 	float: right;
 	margin: 0 0 1em 1em;
 }
-img.alignleft {
+img.alignleft, figure.alignleft {
 	float: left;
 	margin: 0 1em 1em 0;
 }
-img.aligncenter {
+img.aligncenter, figure.aligncenter {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
